# EPSI_OpenInnov-StackNest

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  .semgrepignore  .sonarcloud.properties  .sops.yaml  .sops.yaml.example  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.preview.yml  docker-compose.yml  package-lock.json  package.json  sonar-project.properties  version.json
apps/api/: Dockerfile  README.md  alembic.ini  conftest.py  mypy.ini  pyproject.toml  ruff.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260605_2343-cd58b6a1787c_baseline_socle_db.py  20260606_1428-da2a3d3e781e_tables_socle_users_et_catalogue.py  20260607_2221-b1aab4b3a2b9_ajout_descripteur_provisioning_templates.py  20260607_2334-3012f3cdc8be_ajout_engine_moteur_provisioning_.py  20260608_0010-7d2e4f9a1c8b_table_deploiements.py  20260608_0930-c4e1a2b3d5f6_tables_chat_ia.py  20260610_1130-e7f0a1b2c3d4_messages_created_at_clock_timestamp.py  20260611_1400-f1a2b3c4d5e6_tables_stack_composeur.py  20260611_1600-a1b2c3d4e5f6_template_params_env_var.py  20260611_1800-b2c3d4e5f6a7_template_provisioning_v2.py  20260612_0900-c3d4e5f6a7b8_chat_action_kind_compose_stack.py
apps/api/app/: cli.py  main.py  worker_main.py
apps/api/app/__tests__/integration/: test_cli.integ.py  test_health.integ.py  test_version.integ.py
apps/api/app/__tests__/unit/: test_app_factory.unit.py  test_cli.unit.py
apps/api/app/auth/application/: get_current_user.py  login_result.py  login_user.py  logout_user.py  refresh_access.py  refresh_result.py  register_user.py  request_password_reset.py  reset_password.py  verify_email.py
apps/api/app/auth/domain/entities/: user.py
apps/api/app/auth/domain/enums/: token_purpose.py  user_role.py
apps/api/app/auth/domain/exceptions/: email_already_used.py  email_not_verified.py  forbidden.py  invalid_credentials.py  invalid_token.py  token_expired.py
apps/api/app/auth/domain/interfaces/: password_hasher.py  rate_limiter.py  token_service.py  user_repository.py
apps/api/app/auth/domain/value_objects/: email.py  password.py  token_claims.py
apps/api/app/auth/infrastructure/email/: reset_email.py  smtp_email_sender_factory.py  smtp_settings.py  verification_email.py
apps/api/app/auth/infrastructure/mappers/: user_mapper.py
apps/api/app/auth/infrastructure/models/: user_model.py
apps/api/app/auth/infrastructure/ratelimit/: redis_rate_limiter.py
apps/api/app/auth/infrastructure/repositories/: sqlalchemy_user_repository.py
apps/api/app/auth/infrastructure/security/: bcrypt_password_hasher.py  jwt_token_service.py
apps/api/app/auth/presentation/dependencies/: auth_providers.py  current_user.py  rate_limit.py  require_admin.py
apps/api/app/auth/presentation/exceptions/: rate_limited.py
apps/api/app/auth/presentation/routers/: auth_router.py  refresh_cookie.py
apps/api/app/catalog/application/: create_template.py  delete_template.py  get_template_detail.py  list_templates.py  template_assembler.py  update_template.py
apps/api/app/catalog/application/__tests__/: fakes.py
apps/api/app/catalog/application/commands/: template_command.py
apps/api/app/catalog/domain/entities/: template.py  template_param.py  template_version.py
apps/api/app/catalog/domain/enums/: engine_kind.py  param_type.py  template_category.py
apps/api/app/catalog/domain/exceptions/: slug_already_used.py  template_not_found.py
apps/api/app/catalog/domain/interfaces/: template_repository.py
apps/api/app/catalog/domain/value_objects/: slug.py
apps/api/app/catalog/infrastructure/mappers/: template_mapper.py
apps/api/app/catalog/infrastructure/models/: template_model.py  template_param_model.py  template_version_model.py
apps/api/app/catalog/infrastructure/repositories/: sqlalchemy_template_repository.py
apps/api/app/catalog/infrastructure/seed/: catalog_seed.py  catalog_seeder.py  seed_outcome.py
apps/api/app/catalog/presentation/dependencies/: template_repository_provider.py
apps/api/app/catalog/presentation/routers/: catalog_router.py
apps/api/app/catalog/presentation/schemas/: template_card_dto.py  template_detail_dto.py  template_dto_mapper.py  template_param_dto.py  template_request_mapper.py  template_version_dto.py  template_write_request.py
apps/api/app/chat/application/: action_access.py  confirm_action.py  conversation_access.py  conversation_titler.py  create_conversation.py  delete_conversation.py  get_conversation.py  list_conversations.py  reject_action.py  rename_conversation.py  send_message.py
apps/api/app/chat/application/__tests__/: fakes.py
apps/api/app/chat/application/commands/: send_message_command.py
apps/api/app/chat/domain/entities/: chat_action.py  conversation.py  message.py
apps/api/app/chat/domain/enums/: action_kind.py  action_status.py  blocked_reason.py  message_role.py
apps/api/app/chat/domain/exceptions/: chat_action_not_found.py  unknown_template.py  (+2 more)
apps/api/app/core/: config.py  exception_handlers.py  logging.py  sentry.py
apps/api/app/core/database/: base.py  engine.py  healthcheck.py  models_registry.py  pg_enum.py  request_session.py  session.py  timestamp_mixin.py
apps/api/app/core/middleware/: logging_middleware.py
apps/api/app/core/redis/: redis_client.py
apps/api/app/deployment/application/: create_deployment.py  deployment_access.py  destroy_deployment.py  get_deployment.py  list_deployments.py  regenerate_password.py  start_deployment.py  stop_deployment.py
apps/api/app/deployment/worker/: deployment_job_handler.py
apps/api/app/email/infrastructure/: smtp_email_sender.py
apps/api/app/health/infrastructure/: database_health_check.py
apps/api/app/shared/exceptions/: domain_exception.py
apps/api/app/stack/application/: create_stack.py  delete_stack.py  destroy_stack.py  get_stack.py  list_stacks.py  stack_access.py
apps/api/app/stack/worker/: stack_job_handler.py
apps/api/docs/: guide-developpeur.md
apps/api/tests/: conftest.py
apps/api/tests/e2e/scenarios/: test_auth_lifecycle.e2e.py
apps/api/tests/integration/: test_logging_middleware.integ.py  test_version.integ.py
(+1239 files in other folders)
