[project]
name = "stacknest-api"
version = "0.1.0"
description = "StackNest Backend API (FastAPI + Clean Architecture)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "redis>=7.4.0",
    "sentry-sdk[fastapi]>=2.58.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "mutmut>=3.5.0",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
minversion = "8.0"
# import-mode=importlib : requis pour que pytest importe des fichiers aux noms
# contenant des dots (test_x.unit.py, test_x.integ.py, test_x.e2e.py). Impose
# aussi de ne PAS avoir d'__init__.py dans tests/ (namespace packages).
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--import-mode=importlib",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = ["test_*.unit.py", "test_*.integ.py", "test_*.e2e.py"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "unit: tests unitaires (rapides, pas d'I/O)",
    "integ: tests d'integration (testcontainers, DB, Redis)",
    "e2e: tests end-to-end (stack complet)",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["app/**/__init__.py"]

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

# Mutation testing : complementaire a la coverage. La coverage dit "ce code est
# execute", mutmut dit "les tests detectent vraiment un changement de
# comportement". Cible la logique metier (use cases, services, value objects,
# entities) — pas l'infra ni la presentation (deja couverts par les tests
# d'integration ASGI).
[tool.mutmut]
paths_to_mutate = [
    "app/core/",
    "app/shared/",
    # A ajouter au fil des features :
    # "app/auth/application/",
    # "app/auth/domain/",
    # "app/catalog/application/",
    # ...
]
tests_dir = "tests/"
runner = "uv run pytest -x --no-cov -q"
# Echec global si moins de 60% des mutations sont tuees (point de depart, a durcir).
# mutmut 3.x renvoie code de retour 1 si le seuil n'est pas atteint quand on
# utilise --CI ou via la cmd 'mutmut results --threshold 60'.
