[project]
name = "stacknest-api"
version = "0.1.0"
description = "StackNest Backend API (FastAPI + Clean Architecture)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosmtplib>=5.1.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "redis>=7.4.0",
    "sentry-sdk[fastapi]>=2.58.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "mutmut>=3.5.0",
    "mypy>=1.20.1",
    "poethepoet>=0.44.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
    "testcontainers>=4.14.2",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
minversion = "8.0"
# import-mode=importlib : requis pour que pytest importe des fichiers aux noms
# contenant des dots (test_x.unit.py, test_x.integ.py, test_x.e2e.py). Impose
# aussi de ne PAS avoir d'__init__.py dans tests/ (namespace packages).
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--import-mode=importlib",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
testpaths = ["app", "tests"]
python_files = ["test_*.unit.py", "test_*.integ.py", "test_*.e2e.py"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "unit: tests unitaires (rapides, pas d'I/O)",
    "integ: tests d'integration (testcontainers, DB, Redis)",
    "e2e: tests end-to-end (stack complet)",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["app/**/__init__.py", "app/**/__tests__/**"]

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

# Mutation testing : complementaire a la coverage. La coverage dit "ce code est
# execute", mutmut dit "les tests detectent vraiment un changement de
# comportement". Cible la logique metier (use cases, services, value objects,
# entities) — pas l'infra ni la presentation (deja couverts par les tests
# d'integration ASGI).
[tool.mutmut]
paths_to_mutate = [
    "app/core/",
    "app/shared/",
    # A ajouter au fil des features :
    # "app/auth/application/",
    # "app/auth/domain/",
    # "app/catalog/application/",
    # ...
]
tests_dir = "app/"
runner = "uv run pytest -x --no-cov -q"
# Exclut les fichiers de test (co-located dans __tests__/) des cibles a muter.
exclude = ["**/__tests__/**"]
# Echec global si moins de 60% des mutations sont tuees (point de depart, a durcir).
# mutmut 3.x renvoie code de retour 1 si le seuil n'est pas atteint quand on
# utilise --CI ou via la cmd 'mutmut results --threshold 60'.

# Task runner (equivalent des scripts npm cote frontend). Usage : uv run poe <task>.
# Les tasks composites (list) s'arretent au premier echec.
[tool.poe.tasks]
# --- Quality ---
lint           = "ruff check ."
"lint:fix"     = "ruff check . --fix"
"format:check" = "ruff format --check ."
format         = "ruff format ."
"format:write" = "ruff format ."           # alias explicite (parite frontend)
typecheck      = "mypy ."

# --- Tests ---
test           = "pytest"                  # tout + coverage + seuil 80%
"test:unit"    = "pytest -m unit --no-cov" # boucle TDD rapide
"test:integ"   = "pytest -m integ"
"test:coverage"= "pytest --cov-report=html"
e2e            = "pytest -m e2e"
# Mutation testing : natif Linux/Mac/CI. Sur Windows, utiliser la commande Docker
# documentee dans le README (mutmut ne supporte pas natif win32).
"test:mutation"= "mutmut run"

# --- Build ---
build          = "docker build -t stacknest-api:local ."

# --- Composites ---
check          = ["lint", "format:check", "typecheck", "test"]  # gate CI complet
fix            = ["lint:fix", "format"]                          # auto-fix tout
